# concordium_two_step_transfer

./: Cargo.toml  README.md  rustfmt.toml  two_step_transfer.wasm.v1
frontend/: index.html  index.js
frontend/lib/: concordium.min.js  concordiumHelpers.min.js
src/: lib.rs
