[package]
name = "concordium_two_step_transfer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
concordium-std = "4"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
